# bevy-in-web-worker

./: .gitignore  Cargo.toml  README.MD  README_zh.MD  build-wasm.sh  run-wasm.sh  zh.md
public/: bevy_in_main_thread.js  index.html  index.js  main_thread_engine_instance.js  worker.js
src/: bevy_app.rs  lib.rs  message.rs  ray_pick.rs  web_ffi.rs
src/canvas_view/: canvas.rs  canvas_view_plugin.rs  canvas_views.rs  mod.rs
src/worker/: mainWorker.js  mod.rs  workerGen.js
