[package]
name = "bevy-in-web-worker"
description = "bevy +  web worker"
authors = ["Jinlei Li"]
version = "0.4.0"
edition = "2024"
rust-version = "1.92"

[lib]
crate-type = ["cdylib"]

[dependencies]
app-surface = { version = "=1.8.1", features = ["web_rwh"] }
raw-window-handle = "0.6"
wgpu = "27"
bevy = { version = "0.18", features = [
    "bevy_pbr",
    "bevy_gizmos",
    "bevy_gizmos_render",
    "tonemapping_luts",
    "webgpu",
    "bevy_window",
    "bevy_log",
    "zstd_rust",
], default-features = false }
uuid = { version = "1.20", features = ["v4"] }
# 为了让 uuid 及 rand 支持 web 环境
getrandom = { version = "0.3.4", default-features = false, features = [
    "wasm_js",
] }
rand = "0.9"
# Web only
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
console_error_panic_hook = "0.1.7"
console_log = "1"
web-sys = { version = "0.3.85", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "MouseEvent",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "Event",
    "MessageEvent",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "0.3.85"

[profile.wasm-release]
inherits = "release"
debug = 0
opt-level = "z"
strip = "debuginfo"
lto = "fat"
# lto = true
codegen-units = 1
panic = "abort"


# works
[profile.dev-opt]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
debug = true
overflow-checks = true
